--- a/index.html
+++ b/index.html
@@ -232,10 +232,12 @@
     </div>
     
     <!-- Game Scripts -->
+    <script src="deterministic.js"></script>
     <script src="terrain.js"></script>
     <script src="physics.js"></script>
     <script src="player.js"></script>
     <script src="projectile.js"></script>
+    <script src="eigensand.js"></script>
     <script src="engine.js"></script>
     <script src="network.js"></script>
     <script src="input.js"></script>
