--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
             }
 
             if (input) {
-                input.update();
+                input.update({ skipNetwork: true });
             }
         }
         
